fix scrollbar on web

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -5,13 +5,19 @@
 
 /* webkit */
 
+
 ::-webkit-scrollbar {
-  width: 10px;
-  height: 15px;
+  width: 0.2em;
+  background-color: #000000;
 }
 
-::-webkit-search-cancel-button {
-  display: none;
+::-webkit-scrollbar-thumb {
+  background-color: #615043;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #ffffff;
 }
 
 /* Scrollbars style */
